--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,7 +64,7 @@ body {
 .container__calc .calc input {
   width: 100px;
   height: 30px;
-  background-color: #00000050;
+  background-color: rgba(0, 0, 0, 0.3137254902);
   border-radius: 10px;
   color: white;
   padding-left: 5px;
@@ -270,11 +270,10 @@ body {
   color: white;
   border-radius: 15px;
 }
-.container__plot .plot_day:focus {
-  overflow: scroll;
-}
-.container__plot .plot_day #myChart {
-  overflow: scroll;
+.container__plot .plot_day .containerPlot {
+  width: 940px;
+  max-height: 250px;
+  color: black;
 }
 .container__plot .plot_trande {
   display: flex;
