--- a/src/css/style.css
+++ b/src/css/style.css
@@ -102,7 +102,7 @@ body {
   color: white;
   border-radius: 15px;
   padding: 15px;
-  min-width: 280px;
+  min-width: 283px;
 }
 .container__calc .calc .stop_time .break_info {
   display: flex;
@@ -277,12 +277,19 @@ body {
 }
 .container__plot .plot_trande {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 330px;
   margin-top: 15px;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
+}
+.container__plot .plot_trande .containerPlot {
+  width: 940px;
+  max-height: 250px;
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
