--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -92,6 +92,7 @@ body {
                 .point {
                     display: flex;
                     flex-direction: row;
+
                     label {
                         span {
                             display: flex;
@@ -101,8 +102,9 @@ body {
                             padding: 0 5px 0 5px;
                         }
                     }
-                    
+
                 }
+
                 .last_label {
                     margin-bottom: 5px;
                 }
@@ -116,7 +118,7 @@ body {
                 color: white;
                 border-radius: 15px;
                 padding: 15px;
-                min-width: 280px;
+                min-width: 283px;
 
 
                 .break_info {
@@ -206,6 +208,7 @@ body {
                     max-height: 172px;
                     min-height: 172px;
                     margin-top: 15px;
+
                     .post {
                         width: 100%;
                         padding-left: 2px;
@@ -248,17 +251,17 @@ body {
                 padding: 15px;
                 margin-left: 15px;
 
-                    h4 {
-                        padding-bottom: 15px;
-                        width: 165px;
-                        font-size: 18px;
-    
-                        span {
-                            margin-left: 15px;
-                            float: right;
-                        }
+                h4 {
+                    padding-bottom: 15px;
+                    width: 165px;
+                    font-size: 18px;
+
+                    span {
+                        margin-left: 15px;
+                        float: right;
                     }
-                
+                }
+
                 .equel {
                     width: 100%;
                     height: 30px;
@@ -272,28 +275,31 @@ body {
                     background-color: white;
                     color: black;
                     font-weight: 600;
+
                     // flex: 0 1 auto;
                     // transition-duration: 0.5s;
                     @keyframes white_black {
                         from {
                             background-color: white;
                         }
+
                         to {
                             background-color: black;
                             color: white;
                         }
                     }
+
                     &:hover {
                         animation: white_black 0.2s both;
                     }
-                    
-                
+
+
                 }
             }
         }
     }
 
-   
+
     &__plot {
         display: flex;
         flex-direction: column;
@@ -311,7 +317,7 @@ body {
             background-color: #1d1c1c;
             color: white;
             border-radius: 15px;
-            
+
             .containerPlot {
                 width: 940px;
                 max-height: 250px;
@@ -321,12 +327,21 @@ body {
 
         .plot_trande {
             display: flex;
+            align-items: center;
+            justify-content: center;
             width: 100%;
             height: 330px;
             margin-top: 15px;
             background-color: #1d1c1c;
             color: white;
             border-radius: 15px;
+
+            .containerPlot {
+                width: 940px;
+                max-height: 250px;
+                color: black;
+            }
+
         }
     }
 }
